# flang

./: .gitignore  CMakeLists.txt  README.md  main.cpp
flang-backend-llvm/tests/: CMakeLists.txt  dummy_test.cpp
flang-llvm/: CMakeLists.txt
flang-llvm/tests/: CMakeLists.txt  dummy_test.cpp
ocaml-llvm/: CMakeLists.txt
ocaml-llvm/doc/: patterns_refactoring.txt  type_expressions_refactoring.txt
ocaml-llvm/include/: ocamlast.h  ocamlgrammar.h  ocamlids.h  ocamllexer.h
ocaml-llvm/src/: dummy.cpp
ocaml-llvm/tests/: CMakeLists.txt  ocamlgrammar_test.cpp  ocamllexer_test.cpp
ocaml-llvm/tests/ocaml-test-data/asmrun/: amd64.S  arm64.S  backtrace_prim.c  fail.c  i386.S  stack.h  startup.c
ocaml-llvm/tests/ocaml-test-data/byterun/: alloc.c  backtrace_prim.c  callback.c  compact.c  custom.c  debugger.c  dynlink.c  freelist.c  gc_ctrl.c  globroots.c  interp.c  ints.c  main.c  major_gc.c  md5.c  memory.c  parsing.c  printexc.c  roots.c  signals.c  signals_byt.c  startup.c  startup_aux.c  str.c  unix.c  win32.c
ocaml-llvm/tests/ocaml-test-data/byterun/caml/: address_class.h  alloc.h  backtrace_prim.h  compact.h  config.h  debugger.h  dynlink.h  exec.h  fail.h  fix_code.h  freelist.h  gc_ctrl.h  instruct.h  interp.h  io.h  major_gc.h  md5.h  memory.h  minor_gc.h  misc.h  osdeps.h  prims.h  printexc.h  reverse.h  roots.h  signals_machdep.h
ocaml-llvm/tests/ocaml-test-data/config/auto-aux/: ansi.c  async_io.c  dblalign.c  endian.c  gethostbyaddr.c  gethostbyname.c  ia32sse2.c  int64align.c  nanosecond_stat.c  setgroups.c  sizes.c
ocaml-llvm/tests/ocaml-test-data/man/: ocamlc.m  ocamlcp.m  ocamldep.m  ocamldoc.m  ocamlmktop.m  ocamlopt.m  ocamlprof.m  ocamlyacc.m
ocaml-llvm/tests/ocaml-test-data/otherlibs/bigarray/: bigarray.h  bigarray_stubs.c  mmap_unix.c
ocaml-llvm/tests/ocaml-test-data/otherlibs/graph/: color.c  dump_img.c  image.c  image.h  make_img.c  point_col.c  sound.c  text.c
ocaml-llvm/tests/ocaml-test-data/otherlibs/num/: bng_arm64.c  bng_digit.c  nat.h
ocaml-llvm/tests/ocaml-test-data/otherlibs/systhreads/: st_posix.h  st_stubs.c  st_win32.h
ocaml-llvm/tests/ocaml-test-data/otherlibs/threads/: scheduler.c
ocaml-llvm/tests/ocaml-test-data/otherlibs/unix/: bind.c  chdir.c  chown.c  chroot.c  close.c  cst2constr.c  cstringv.c  dup2.c  envir.c  execv.c  exit.c  fchmod.c  fchown.c  fork.c  getcwd.c  getgid.c  getgr.c  getlogin.c  getpeername.c  getppid.c  getserv.c  getsockname.c  gettimeofday.c  getuid.c  gmtime.c  initgroups.c  isatty.c  kill.c  link.c  lseek.c  mkdir.c  mkfifo.c  open.c  opendir.c  pipe.c  read.c  readdir.c  rmdir.c  sendrecv.c  setgid.c  (+13 more)
ocaml-llvm/tests/ocaml-test-data/otherlibs/win32graph/: draw.c  events.c  open.c
ocaml-llvm/tests/ocaml-test-data/otherlibs/win32unix/: accept.c  bind.c  close_on.c  connect.c  createprocess.c  dup2.c  errmsg.c  getpeername.c  getpid.c  getsockname.c  link.c  listen.c  lockf.c  pipe.c  read.c  select.c  sleep.c  socket.c  socketaddr.h  stat.c  unixsupport.h  windbug.c  windir.c  winwait.c  winworker.c  winworker.h  write.c
ocaml-llvm/tests/ocaml-test-data/stdlib/: header.c
ocaml-llvm/tests/ocaml-test-data/testsuite/tests/asmcomp/: main.c  mainarith.c  power.S
ocaml-llvm/tests/ocaml-test-data/testsuite/tests/callback/: callbackprim.c
ocaml-llvm/tests/ocaml-test-data/testsuite/tests/embedded/: cmmain.c
ocaml-llvm/tests/ocaml-test-data/testsuite/tests/int64-unboxing/: stubs.c
ocaml-llvm/tests/ocaml-test-data/tools/: checkstack.c  objinfo_helper.c
ocaml-llvm/tests/ocaml-test-data/yacc/: closure.c  defs.h  lalr.c  lr0.c  output.c  reader.c  verbose.c  warshall.c
ocaml-llvm/tests/ocaml/asmrun/: natdynlink.c  power.S  roots.c  signals_asm.c  signals_osdep.h  sparc.S
ocaml-llvm/tests/ocaml/byterun/: array.c  backtrace.c  compare.c  extern.c  fail.c  finalise.c  fix_code.c  floats.c  hash.c  intern.c  io.c  lexing.c  meta.c  minor_gc.c  misc.c  obj.c  stacks.c  sys.c  terminfo.c  unix.c  weak.c
ocaml-llvm/tests/ocaml/byterun/caml/: backtrace.h  callback.h  custom.h  finalise.h  gc.h  globroots.h  instrtrace.h  int64_emul.h  int64_format.h  int64_native.h  intext.h  mlvalues.h  signals.h  stacks.h  startup.h  startup_aux.h  sys.h  ui.h
ocaml-llvm/tests/ocaml/config/auto-aux/: align.c  elf.c  initgroups.c  signals.c
ocaml-llvm/tests/ocaml/man/: ocaml.m  ocamlc.m  ocamlcp.m  ocamldebug.m  ocamldep.m  ocamllex.m  ocamlmktop.m  ocamlrun.m
ocaml-llvm/tests/ocaml/otherlibs/bigarray/: mmap_win32.c
ocaml-llvm/tests/ocaml/otherlibs/graph/: draw.c  events.c  fill.c  libgraph.h  open.c  subwindow.c
ocaml-llvm/tests/ocaml/otherlibs/num/: bng.c  bng.h  bng_amd64.c  bng_ia32.c  bng_ppc.c  bng_sparc.c  nat_stubs.c
ocaml-llvm/tests/ocaml/otherlibs/str/: strstubs.c
ocaml-llvm/tests/ocaml/otherlibs/systhreads/: threads.h
ocaml-llvm/tests/ocaml/otherlibs/unix/: accept.c  access.c  addrofstr.c  alarm.c  chmod.c  closedir.c  connect.c  cst2constr.h  dup.c  errmsg.c  execve.c  execvp.c  fcntl.c  ftruncate.c  getaddrinfo.c  getegid.c  geteuid.c  getgroups.c  gethost.c  gethostname.c  getnameinfo.c  getpid.c  getproto.c  getpw.c  itimer.c  listen.c  lockf.c  nice.c  putenv.c  readlink.c  rename.c  rewinddir.c  select.c  setgroups.c  setuid.c  socketaddr.h  socketpair.c  strofaddr.c  termios.c  truncate.c  (+4 more)
ocaml-llvm/tests/ocaml/otherlibs/win32graph/: dib.c  libgraph.h
ocaml-llvm/tests/ocaml/otherlibs/win32unix/: channels.c  close.c  dup.c  gettimeofday.c  lseek.c  mkdir.c  nonblock.c  open.c  rename.c  sendrecv.c  shutdown.c  sockopt.c  startup.c  system.c  times.c  unixsupport.c  winlist.c  winlist.h
ocaml-llvm/tests/ocaml/stdlib/: headernt.c
ocaml-llvm/tests/ocaml/yacc/: error.c  main.c  mkpar.c  skeleton.c  symtab.c
ocaml-llvm/tools/: CMakeLists.txt
ocaml-llvm/tools/ocaml-ast2dot/: CMakeLists.txt
ocaml-llvm/tools/ocaml-ast2dot/include/: Graph.h  GraphGenerator.h  Options.h  Parser.h  Translator.h
ocaml-llvm/tools/ocaml-ast2dot/include/impl/: Graph.inc
ocaml-llvm/tools/ocaml-ast2dot/src/: Graph.cpp  GraphGenerator.cpp  Options.cpp  Parser.cpp  Translator.cpp  main.cpp
(+21 files in other folders)
